src/validation/tests/snapshots/rusty__validation__tests__recursive_validation_tests__arrays__one_cycle_aba_input.snap
---
source: src/validation/tests/recursive_validation_tests.rs
expression: "&diagnostics"
---
error[E029]: Recursive data structure `A -> B -> A` has infinite size
  ┌─ <internal>:2:18
  │
2 │             TYPE A : STRUCT
  │                  ^
  │                  │
  │                  Recursive data structure `A -> B -> A` has infinite size
  │                  see also
  ·
6 │             FUNCTION_BLOCK B
  │                            - see also
